--- a/Gui/MainWindow.ui
+++ b/Gui/MainWindow.ui
@@ -6,20 +6,106 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>675</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Example</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <widget class="QWidget" name="booleanTab">
+       <attribute name="title">
+        <string>Boolean</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="recognitionTab">
+       <attribute name="title">
+        <string>Recognition</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="3" column="0">
+         <widget class="QCommandLinkButton" name="fixRecognitionButton">
+          <property name="text">
+           <string>Fix recognition</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="GridField" name="gridField" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>1</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <layout class="QFormLayout" name="formLayout">
+          <property name="fieldGrowthPolicy">
+           <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Size</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QSpinBox" name="gridSize">
+            <property name="minimum">
+             <number>5</number>
+            </property>
+            <property name="maximum">
+             <number>15</number>
+            </property>
+            <property name="value">
+             <number>10</number>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Value</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QComboBox" name="recognizedValue"/>
+          </item>
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="symbolSet"/>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>Values</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>675</width>
      <height>20</height>
     </rect>
    </property>
@@ -65,6 +151,17 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>GridField</class>
+   <extends>QWidget</extends>
+   <header>GridField.hpp</header>
+   <container>1</container>
+   <slots>
+    <slot>setSize(int)</slot>
+   </slots>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
@@ -112,6 +209,22 @@
     <hint type="destinationlabel">
      <x>199</x>
      <y>149</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>gridSize</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>gridField</receiver>
+   <slot>setSize(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>82</x>
+     <y>96</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>187</x>
+     <y>359</y>
     </hint>
    </hints>
   </connection>
